fix z-index professionnel

--- a/octodiving/src/Formulaire/stylesFormulaire.scss
+++ b/octodiving/src/Formulaire/stylesFormulaire.scss
@@ -1,9 +1,6 @@
-.formContainer{
-    z-index: -1;
-}
+
 .prestation, .facturation{
     margin: 2em 0;
-    z-index: auto;
     
 }
 
